fixing overlapping items

--- a/themes/stderr-ocp/css/_typography.scss
+++ b/themes/stderr-ocp/css/_typography.scss
@@ -69,7 +69,7 @@ h4, h5, h6 {
 #post a.anchor, #custom-page a.anchor {
     float: left;
     padding-right: 4px;
-    margin-left: -20px;
+    margin-left: -10px;
 }
 
 ul {
