--- a/themes/stderr-ocp/css/style.scss
+++ b/themes/stderr-ocp/css/style.scss
@@ -505,7 +505,7 @@ ol li {
     }
 
     input[type="submit"] {
-        margin-left: -50px;
+        margin-left: 0px;
         height: 21px;
         width: 50px;
         border: 0;
@@ -556,7 +556,7 @@ ol li {
     }
 
     .post-tags-class {
-        padding: 0 24px 0 0;
+        padding: 24px 24px 0 0;
     }
 
     #right {
@@ -569,7 +569,7 @@ ol li {
     }
 
     input[type="submit"] {
-        margin-left: -50px;
+        margin-left: 0px;
         height: 21px;
         width: 50px;
         border: 0;
